style.css
body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
  font-size: 1em;
  /*text-shadow: 0 0 10px #000;*/
  color: #fff;
  background: #888;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
}

section{
  min-height: 100%
}

h1{
  font-size: 2em;
  padding: 0 0.3em;
  line-height: 1em;
}

h2{
  font-size: 1.5em;
  padding: 0 0.3em;
  line-height: 1em;
}


p{
  padding: 0 1em;
}

a{
  color: #fff;
}

footer{
  position: absolute;
  bottom: 0;
  float: right;
  font-size: 0.1em;
}


.temperature_div {
  margin: 0;
  position: absolute;
  top: 0%;
  left: 0%;
  min-width: 100%;
  font-size: 1em;
  text-align: right;
  padding-right: 10%;
}

.temperature_div p {
  padding-right: 1%;
  font-size: 1em;
}

.temperature_div a {
  text-decoration: none;
}

.greeting_div { 
  margin: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);

  font-size: 3em;
  font-weight: 500; /* bold is 700, 400 is normal*/

}
.greeting_div p { 
  margin: 0;
  padding: 0;
  text-align: center; 

}

.quote_div {
  margin: 0;
  position: absolute;
  bottom: 0%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);

  max-width: 30%;
  font-size: 1em;
}


img.bg {
  /* Set rules to fill background */
  min-height: 100%;
  min-width: 1024px;
  
  /* Set up proportionate scaling */
  width: 100%;
  height: auto;
  
  /* Set up positioning */
  position: fixed;
  top: 0;
  left: 0;

  /*always push to the back*/
  z-index: -1;

  filter: brightness(80%);
}
/*
@media screen and (max-width: 1024px) { 
  img.bg {
    left: 50%;
    margin-left: -512px;   
  }
}
*/

